<resources>
    <!-- Application string resources -->
    <string name="app_name">Speaking Partners</string>

    <string name="str_date_day">Day</string>
    <string name="str_date_month">Month</string>
    <string name="str_date_year">Year</string>

    <string name="str_next">Next</string>
    <string name="str_back">Back</string>
    <string name="str_skip">Skip</string>
    <string name="str_search">Search</string>

    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>

    <!-- Login | Sign up -->
    <string name="str_main_header_login">Looking for a partner to speak english?</string>
    <string name="str_main_header_sign_up">CREATE YOUR ACCOUNT</string>
    <string name="str_main_subtitle">Meet your partner and talk together.</string>
    <string name="str_agree">I accept</string>
    <string name="str_terms_and_policies"> terms of service and privacy policy</string>

    <!-- Main menu -->
    <string name="action_settings">Settings</string>
    <string name="action_rate_my_app">Rate</string>
    <string name="action_about">About Application</string>
    <string name="action_profile">Me</string>
    <string name="action_report_problem">Report a problem</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_nav_active">People</string>
    <string name="bottom_nav_recent">Recent</string>
    <string name="bottom_nav_pending">Pending</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_profile">ME</string>

    <!-- Account -->
    <string name="str_log_in">LOG IN</string>
    <string name="str_sign_up">SIGN UP</string>
    <string name="str_sign_up_facebook">Sign up with facebook</string>
    <string name="str_sign_in_facebook">Sign in with facebook</string>
    <string name="str_forgot_password">FORGOT PASSWORD?</string>
    <string name="str_reset_password">Change Password</string>
    <string name="str_show_password">SHOW PASSWORD</string>
    <string name="str_create_new_account">CREATE NEW PARTNER ACCOUNT</string>
    <string name="str_already_account">Already have account?</string>
    <string name="str_log_out">Log out</string>
    <string name="str_or">OR</string>

    <string name="str_profile">Profile</string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="str_user_name">Name</string>
    <string name="str_user_email">Email</string>
    <string name="str_user_password">Password</string>
    <string name="str_user_gender">Gender</string>
    <string name="str_user_gender_male">Male</string>
    <string name="str_user_gender_female">Female</string>
    <string name="str_user_birthday">Date Of Birth</string>
    <string name="str_user_phone_no">Phone no</string>
    <string name="str_user_language">Language</string>
    <string name="str_user_country">Country</string>
    <string name="str_user_country_myanmar">mm</string>
    <string name="str_user_country_flag">Flag</string>
    <string name="str_user_level">Level</string>
    <string name="str_user_level_choose">Level</string>
    <string name="str_user_country_choose">Country</string>
    <string name="str_user_active_now">Active now</string>
    <string name="str_user_offline">Offline</string>
    <string name="str_user_bio">Bio</string>
    <string name="str_user_record_title">Another User name</string>

    <string name="str_user_sample_email">example@gmail.com</string>
    <string name="str_sample_level_beginner">Beginner</string>
    <string name="str_sample_country_myanmar">Myanmar (Burma)</string>
    <string name="str_sample_dob">July 27, 1998</string>
    <string name="str_online">Online</string>
    <string name="str_offline">Offline</string>
    <string name="save">Save</string>
    <string name="select_your_birthday">Select Your Birthday</string>
    <string name="str_profile_upload">Choose Picture</string>

    <string name="str_user_photo">Photo</string>

    <string name="str_user_record">My Records</string>
    <string name="str_user_listen">Listen</string>

    <string name="str_user_partner">Partner</string>

    <!-- Date Time -->
    <string name="str_date_format">dd/MM/yyyy</string>
    <string name="str_date_format_lower">dd/mm/yyyy</string>
    <string name="str_time_format">hh:mm:ss</string>

    <!-- Recent replay -->
    <string name="recent_replay_title">Topic-dd-mm-yy-hh-mm-ss</string>
    <string name="recent_replay_date_time">12/12/2018 3:20:00 pm</string>
    <string name="recent_replay_duration">00:00</string>
    <string name="recent_replay_incoming">incoming</string>
    <string name="recent_replay_outgoing">outgoing</string>

    <!-- Pending -->
    <string name="pending_accept">Accept</string>
    <string name="pending_reject">Reject</string>

    <!-- Level -->
    <string-array name="speaking_level">
        <item>Select Your Level</item>
    </string-array>

    <!-- Country -->
    <string-array name="sample_country">
        <item>Algeria</item>
        <item>Albania</item>
    </string-array>

    <string name="empty_fragment_pending_text">You have no pending request</string>
    <string name="empty_fragment_active_text">No active contact</string>
    <string name="empty_fragment_recent_text">You have no recent</string>

    <!-- Voice Call -->
    <!-- Agora -->
    <!--<string name="agora_app_id">58a1031c26ef41cc9e1792a3dfef62a1</string>-->
    <string name="agora_app_id">d08ab25c4cda4d63be2b37d0188d0409</string>

    <string name="str_pre_calling_request">Request</string>
    <string name="pre_calling_topic">Topic</string>
    <string name="str_id">ID</string>
    <string name="str_pre_calling_motivation">About Your Partner</string>
    <string name="str_topic_selection_header">Choose Topic</string>
    <string name="str_you">(You)</string>
    <string name="str_verify">Verify</string>
    <string name="str_email_is_not_verified">Your email is not verified</string>
    <string name="str_sent_mail">We send verify mail!</string>
    <string name="str_review">Review</string>
    <string name="str_start">start</string>
    <string name="str_connection_lost">Connection Lost!</string>
    <string name="str_connection_interrupted">Connection Interrupted!</string>
    <string name="str_something_wrong">Something went wrong!</string>
    <string name="str_connection_success">Connection Success</string>
    <string name="str_waiting_process">Waiting…</string>
    <string name="str_connected_process">Connected</string>
    <string name="str_edit_profile_header">Profile picture is required to know who you are.</string>


    <string name="str_call">Call</string>

    <!-- About -->
    <string name="str_about_application">
        \t\tSpeaking Partners Application သည္ English Speaking ကို Partners ရွာျပီး ေျပာရေသာ Online App တစ္မ်ိဳးျဖစ္သည္။
        လူျကားထဲတြင္ English စကားေျပာဆိုရန္ ရွက္ေသာသူ၊ English သင္တန္းမ်ားကုိ level ေတာ္ေတာ္မ်ားမ်ား တက္ေရာက္ျပီး
        ျပန္မေလ့လာနိုင္ေသာသူမ်ား အတြက္ Partners မ်ားကို ေရြးခ်ယ္ျပီး ေလ့က်င့္နုိင္ပါသည္။
        App ထဲတြင္ Topics မ်ား ျကိုျပီး သတ္မွတ္ထားေပးသည့္အတြက္ Topic တစ္ခုခ်င္းစီကို ျကို၍ ေလ့လာထားနိုင္ပါသည္။
        Chatting App မဟုတ္ဘဲ Calling App ျဖစ္သည့္အတြက္ Listening and Speaking Skills ကုိ တိုးတက္ေစပါသည္။
    </string>
    <string name="str_developer_team">Developer Team</string>
    <string name="str_cho_mi_mg_aye">Cho Mi Maung Aye (UCSY)</string>
    <string name="str_saw_thandar">Saw Thandar (UCSY)</string>
    <string name="str_k_z_y_t">Kyaw Zayar Tun (UCSY)</string>

</resources>
