<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_row_height"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingTop="@dimen/general_padding_8">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/recent_replay_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_replay_title"
            android:textSize="@dimen/general_text_size_16"
            android:textColor="@color/color_black"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/recent_replay_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/recent_replay_date_time"
            android:textSize="@dimen/general_text_size_14"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="@dimen/general_padding_8">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/recent_calling_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/recent_replay_incoming"
            android:textSize="@dimen/general_text_size_14"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/recent_replay_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/recent_replay_duration"
            android:textSize="@dimen/general_text_size_14"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>